--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -8,8 +8,9 @@
     <title>Shelter</title>
   </head>
   <body>
+    <!-- header -->
     <header>
-      <div class="section-center">
+      <div class="header-center">
         <div class="navbar">
           <a href="#" class="nav-left">
             <h1>cozy house</h1>
@@ -42,14 +43,34 @@
         </div>
       </div>
     </header>
-    <ul>
-      <li>1</li>
-      <li>1</li>
-      <li>1</li>
-      <li>1</li>
-      <li>1</li>
-      <li>1</li>
-      <li>1</li>
-    </ul>
+    <!-- end of header -->
+    <!-- about section -->
+    <section class="about">
+      <div class="about-center">
+        <img
+          src="/assets/images/about-pets.png"
+          alt="pet image"
+          class="about-left"
+        />
+        <div class="about-right">
+          <h1>About the shelter “Cozy House”</h1>
+          <p id="first-p">
+            Currently we have 121 dogs and 342 cats on our hands and statistics
+            show that only 20% of them will find a family. The others will
+            continue to live with us and will be waiting for a lucky chance to
+            become dearly loved.
+          </p>
+          <p>
+            We feed our wards with the best food and make sure that they do not
+            get sick, feel comfortable (including psychologically) and well. We
+            are supported by 87 volunteers and 28 employees of various skill
+            levels. About 12% of the animals are taken by the shelter staff.
+            Taking care of the animals, they become attached to the pets and
+            would hardly ever leave them alone.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- end of about section -->
   </body>
 </html>
