feat: add our friends section to the main page

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/4809f3b02f.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Shelter</title>
   </head>
   <body>
@@ -44,6 +48,7 @@
       </div>
     </header>
     <!-- end of header -->
+
     <!-- about section -->
     <section class="about">
       <div class="about-center">
@@ -72,5 +77,80 @@
       </div>
     </section>
     <!-- end of about section -->
+
+    <!-- our friends -->
+    <section class="friends">
+      <h1 class="friends-title">Our friends who are looking for a house</h1>
+      <div class="friends-center">
+        <!-- single card -->
+        <div class="single-card">
+          <img src="/assets/images/pets-katrine.png" alt="pets-katrine" />
+          <h1>katrine</h1>
+          <a href="">Learn more</a>
+        </div>
+        <!-- end of single card -->
+        <!-- single card -->
+        <div class="single-card">
+          <img src="/assets/images/pets-jennifer.png" alt="pets-jennifer" />
+          <h1>jennifer</h1>
+          <a href="">Learn more</a>
+        </div>
+        <!-- end of single card -->
+        <!-- single card -->
+        <div class="single-card">
+          <img src="/assets/images/pets-woody.png" alt="pets-woody" />
+          <h1>woody</h1>
+          <a href="">Learn more</a>
+        </div>
+        <!-- end of single card -->
+        <!-- single card -->
+        <div class="single-card">
+          <img src="/assets/images/pets-sophia.png" alt="pets-sophia" />
+          <h1>sophia</h1>
+          <a href="">Learn more</a>
+        </div>
+        <!-- end of single card -->
+        <!-- single card -->
+        <div class="single-card">
+          <img src="/assets/images/pets-timmy.png" alt="pets-timmy" />
+          <h1>timmy</h1>
+          <a href="">Learn more</a>
+        </div>
+        <!-- end of single card -->
+        <!-- single card -->
+        <div class="single-card">
+          <img src="/assets/images/pets-charly.png" alt="pets-charly" />
+          <h1>charly</h1>
+          <a href="">Learn more</a>
+        </div>
+        <!-- end of single card -->
+        <!-- single card -->
+        <div class="single-card">
+          <img src="/assets/images/pets-scarlet.png" alt="pets-scarlet" />
+          <h1>scarlet</h1>
+          <a href="">Learn more</a>
+        </div>
+        <!-- end of single card -->
+        <!-- single card -->
+        <div class="single-card">
+          <img src="/assets/images/pets-freddie.png" alt="pets-freddie" />
+          <h1>freddie</h1>
+          <a href="">Learn more</a>
+        </div>
+        <!-- end of single card -->
+        <!-- left button -->
+        <button class="left-btn">
+          <i class="fa-solid fa-left-long"></i>
+        </button>
+        <!-- end of left button -->
+        <!-- right button -->
+        <button class="right-btn">
+          <i class="fa-solid fa-right-long"></i>
+        </button>
+        <!-- end of right button -->
+      </div>
+      <div id="rest-btn"><a href="">Get to know the rest</a></div>
+    </section>
+    <!-- end of our friends -->
   </body>
 </html>
