feat: add the help section to the main page

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -49,7 +49,7 @@
     </header>
     <!-- end of header -->
 
-    <!-- about section -->
+    <!-- about -->
     <section class="about">
       <div class="about-center">
         <img
@@ -76,7 +76,7 @@
         </div>
       </div>
     </section>
-    <!-- end of about section -->
+    <!-- end of about -->
 
     <!-- our friends -->
     <section class="friends">
@@ -152,5 +152,71 @@
       <div id="rest-btn"><a href="">Get to know the rest</a></div>
     </section>
     <!-- end of our friends -->
+
+    <!-- help -->
+    <section class="help">
+      <h1 class="help-title">How you can help our shelter</h1>
+      <div class="help-center">
+        <div class="first-row">
+          <!-- single item -->
+          <div class="single-item">
+            <img src="/assets/icons/icon-pet-food.svg" alt="" />
+            <h1>Pet food</h1>
+          </div>
+          <!-- end of single item -->
+          <!-- single item -->
+          <div class="single-item">
+            <img src="/assets/icons/icon-transportation.svg" alt="" />
+            <h1>Transportation</h1>
+          </div>
+          <!-- end of single item -->
+          <!-- single item -->
+          <div class="single-item">
+            <img src="/assets/icons/icon-toys.svg" alt="" />
+            <h1>Toys</h1>
+          </div>
+          <!-- end of single item -->
+          <!-- single item -->
+          <div class="single-item">
+            <img src="/assets/icons/icon-bowls-and-cups.svg" alt="" />
+            <h1>Bowls and cops</h1>
+          </div>
+          <!-- end of single item -->
+          <!-- single item -->
+          <div class="single-item">
+            <img src="/assets/icons/icon-shampoos.svg" alt="" />
+            <h1>Shampoos</h1>
+          </div>
+          <!-- end of single item -->
+        </div>
+        <div class="second-row">
+          <!-- single item -->
+          <div class="single-item">
+            <img src="/assets/icons/icon-vitamins.svg" alt="" />
+            <h1>Vitamins</h1>
+          </div>
+          <!-- end of single item -->
+          <!-- single item -->
+          <div class="single-item">
+            <img src="/assets/icons/icon-medicines.svg" alt="" />
+            <h1>Medicines</h1>
+          </div>
+          <!-- end of single item -->
+          <!-- single item -->
+          <div class="single-item">
+            <img src="/assets/icons/icon-collars-leashes.svg" alt="" />
+            <h1>Collars/leashes</h1>
+          </div>
+          <!-- end of single item -->
+          <!-- single item -->
+          <div class="single-item">
+            <img src="/assets/icons/icon-sleeping-area.svg" alt="" />
+            <h1>Sleeping areas</h1>
+          </div>
+          <!-- end of single item -->
+        </div>
+      </div>
+    </section>
+    <!-- end of help -->
   </body>
 </html>
