feat: add links to buttons and review according to the task requirements

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -16,15 +16,15 @@
     <header>
       <div class="header-center">
         <div class="navbar">
-          <a href="#" class="nav-left">
+          <a href="/pages/main/index.html" class="nav-left">
             <h1>cozy house</h1>
             <p>Shelter for pets in Boston</p>
           </a>
           <div class="nav-right">
-            <a href="" id="active">About the shelter</a>
-            <a href="">Our pets</a>
-            <a href="">Help the shelter</a>
-            <a href="">Contacts</a>
+            <a href="/pages/main/index.html" id="active">About the shelter</a>
+            <a href="/pages/pets/index.html">Our pets</a>
+            <a href="#help">Help the shelter</a>
+            <a href="#footer">Contacts</a>
           </div>
         </div>
 
@@ -36,7 +36,7 @@
               extremely wide and open heart. He or she will love you more than
               anybody else in the world, you will see!
             </p>
-            <a href="">Make a friend</a>
+            <a href="#friends">Make a friend</a>
           </div>
 
           <img
@@ -79,7 +79,7 @@
     <!-- end of about -->
 
     <!-- our friends -->
-    <section class="friends">
+    <section class="friends" id="friends">
       <h1 class="friends-title">Our friends who are looking for a house</h1>
       <div class="friends-center">
         <!-- single card -->
@@ -165,12 +165,14 @@
         </button>
         <!-- end of right button -->
       </div>
-      <div id="rest-btn"><a href="">Get to know the rest</a></div>
+      <div id="rest-btn">
+        <a href="/pages/pets/index.html">Get to know the rest</a>
+      </div>
     </section>
     <!-- end of our friends -->
 
     <!-- help -->
-    <section class="help">
+    <section class="help" id="help">
       <h1 class="help-title">How you can help our shelter</h1>
       <div class="help-center">
         <div class="first-row">
@@ -258,7 +260,7 @@
               fill="#292929"
             />
           </svg>
-          <a href="#">8380 2880 8028 8791 7435</a>
+          <a href="">8380 2880 8028 8791 7435</a>
         </div>
         <p>
           Legal information and lorem ipsum dolor sit amet, consectetur
@@ -271,7 +273,7 @@
     <!-- end of donation -->
 
     <!-- footer -->
-    <footer>
+    <footer id="footer">
       <div class="footer-center">
         <!-- column 1 -->
         <div class="column">
