refactor: change image paths from absolute (/) to relative (./)

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -41,7 +41,7 @@
 
           <img
             class="main-right"
-            src="/assets/images/start-screen-puppy.png"
+            src="../../assets/images/start-screen-puppy.png"
             alt="puppy image"
           />
         </div>
@@ -53,7 +53,7 @@
     <section class="about">
       <div class="about-center">
         <img
-          src="/assets/images/about-pets.png"
+          src="../../assets/images/about-pets.png"
           alt="pet image"
           class="about-left"
         />
@@ -84,56 +84,59 @@
       <div class="friends-center">
         <!-- single card -->
         <div class="single-card">
-          <img src="/assets/images/pets-katrine.png" alt="pets-katrine" />
+          <img src="../../assets/images/pets-katrine.png" alt="pets-katrine" />
           <h1>katrine</h1>
           <a href="">Learn more</a>
         </div>
         <!-- end of single card -->
         <!-- single card -->
         <div class="single-card">
-          <img src="/assets/images/pets-jennifer.png" alt="pets-jennifer" />
+          <img
+            src="../../assets/images/pets-jennifer.png"
+            alt="pets-jennifer"
+          />
           <h1>jennifer</h1>
           <a href="">Learn more</a>
         </div>
         <!-- end of single card -->
         <!-- single card -->
         <div class="single-card">
-          <img src="/assets/images/pets-woody.png" alt="pets-woody" />
+          <img src="../../assets/images/pets-woody.png" alt="pets-woody" />
           <h1>woody</h1>
           <a href="">Learn more</a>
         </div>
         <!-- end of single card -->
         <!-- single card -->
         <div class="single-card">
-          <img src="/assets/images/pets-sophia.png" alt="pets-sophia" />
+          <img src="../../assets/images/pets-sophia.png" alt="pets-sophia" />
           <h1>sophia</h1>
           <a href="">Learn more</a>
         </div>
         <!-- end of single card -->
         <!-- single card -->
         <div class="single-card">
-          <img src="/assets/images/pets-timmy.png" alt="pets-timmy" />
+          <img src="../../assets/images/pets-timmy.png" alt="pets-timmy" />
           <h1>timmy</h1>
           <a href="">Learn more</a>
         </div>
         <!-- end of single card -->
         <!-- single card -->
         <div class="single-card">
-          <img src="/assets/images/pets-charly.png" alt="pets-charly" />
+          <img src="../../assets/images/pets-charly.png" alt="pets-charly" />
           <h1>charly</h1>
           <a href="">Learn more</a>
         </div>
         <!-- end of single card -->
         <!-- single card -->
         <div class="single-card">
-          <img src="/assets/images/pets-scarlet.png" alt="pets-scarlet" />
+          <img src="../../assets/images/pets-scarlet.png" alt="pets-scarlet" />
           <h1>scarlet</h1>
           <a href="">Learn more</a>
         </div>
         <!-- end of single card -->
         <!-- single card -->
         <div class="single-card">
-          <img src="/assets/images/pets-freddie.png" alt="pets-freddie" />
+          <img src="../../assets/images/pets-freddie.png" alt="pets-freddie" />
           <h1>freddie</h1>
           <a href="">Learn more</a>
         </div>
@@ -178,31 +181,31 @@
         <div class="first-row">
           <!-- single item -->
           <div class="single-item">
-            <img src="/assets/icons/icon-pet-food.svg" alt="" />
+            <img src="../../assets/icons/icon-pet-food.svg" alt="" />
             <h1>Pet food</h1>
           </div>
           <!-- end of single item -->
           <!-- single item -->
           <div class="single-item">
-            <img src="/assets/icons/icon-transportation.svg" alt="" />
+            <img src="../../assets/icons/icon-transportation.svg" alt="" />
             <h1>Transportation</h1>
           </div>
           <!-- end of single item -->
           <!-- single item -->
           <div class="single-item">
-            <img src="/assets/icons/icon-toys.svg" alt="" />
+            <img src="../../assets/icons/icon-toys.svg" alt="" />
             <h1>Toys</h1>
           </div>
           <!-- end of single item -->
           <!-- single item -->
           <div class="single-item">
-            <img src="/assets/icons/icon-bowls-and-cups.svg" alt="" />
+            <img src="../../assets/icons/icon-bowls-and-cups.svg" alt="" />
             <h1>Bowls and cops</h1>
           </div>
           <!-- end of single item -->
           <!-- single item -->
           <div class="single-item">
-            <img src="/assets/icons/icon-shampoos.svg" alt="" />
+            <img src="../../assets/icons/icon-shampoos.svg" alt="" />
             <h1>Shampoos</h1>
           </div>
           <!-- end of single item -->
@@ -210,25 +213,25 @@
         <div class="second-row">
           <!-- single item -->
           <div class="single-item">
-            <img src="/assets/icons/icon-vitamins.svg" alt="" />
+            <img src="../../assets/icons/icon-vitamins.svg" alt="" />
             <h1>Vitamins</h1>
           </div>
           <!-- end of single item -->
           <!-- single item -->
           <div class="single-item">
-            <img src="/assets/icons/icon-medicines.svg" alt="" />
+            <img src="../../assets/icons/icon-medicines.svg" alt="" />
             <h1>Medicines</h1>
           </div>
           <!-- end of single item -->
           <!-- single item -->
           <div class="single-item">
-            <img src="/assets/icons/icon-collars-leashes.svg" alt="" />
+            <img src="../../assets/icons/icon-collars-leashes.svg" alt="" />
             <h1>Collars/leashes</h1>
           </div>
           <!-- end of single item -->
           <!-- single item -->
           <div class="single-item">
-            <img src="/assets/icons/icon-sleeping-area.svg" alt="" />
+            <img src="../../assets/icons/icon-sleeping-area.svg" alt="" />
             <h1>Sleeping areas</h1>
           </div>
           <!-- end of single item -->
@@ -240,7 +243,7 @@
     <!-- donation -->
     <section class="donation">
       <img
-        src="/assets/images/donation-dog.png"
+        src="../../assets/images/donation-dog.png"
         alt="donation dog"
         class="donation-left"
       />
@@ -280,13 +283,13 @@
           <h1>For questions and suggestions</h1>
           <a href="mailto:email@shelter.com" class="margin-btm">
             <div class="row">
-              <img src="/assets/icons/icon-email.png" alt="email icon" />
+              <img src="../../assets/icons/icon-email.png" alt="email icon" />
               email@shelter.com
             </div>
           </a>
           <a href="tel:+136745677554">
             <div class="row">
-              <img src="/assets/icons/icon-phone.png" alt="phone icon" />
+              <img src="../../assets/icons/icon-phone.png" alt="phone icon" />
               +136745677554
             </div>
           </a>
@@ -302,13 +305,13 @@
             target="_blank"
           >
             <div class="row">
-              <img src="/assets/icons/icon-marker.png" alt="marker icon" />
+              <img src="../../assets/icons/icon-marker.png" alt="marker icon" />
               1 Central Street, Boston (entrance from the store)
             </div>
           </a>
           <a href="https://goo.gl/maps/vuaURMWv2QeDEYSg8" target="_blank">
             <div class="row">
-              <img src="/assets/icons/icon-marker.png" alt="marker icon" />
+              <img src="../../assets/icons/icon-marker.png" alt="marker icon" />
               18 South Park, London
             </div>
           </a>
@@ -316,7 +319,7 @@
         <!-- end of column 2 -->
 
         <!-- column 3 -->
-        <img src="/assets/images/footer-puppy.png" alt="puppy image" />
+        <img src="../../assets/images/footer-puppy.png" alt="puppy image" />
         <!-- end of column 3 -->
       </div>
     </footer>
