refactor: change link paths from absolute (/) to relative (./)

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -16,13 +16,15 @@
     <header>
       <div class="header-center">
         <div class="navbar">
-          <a href="/pages/main/index.html" class="nav-left">
+          <a href="../../pages/main/index.html" class="nav-left">
             <h1>cozy house</h1>
             <p>Shelter for pets in Boston</p>
           </a>
           <div class="nav-right">
-            <a href="/pages/main/index.html" id="active">About the shelter</a>
-            <a href="/pages/pets/index.html">Our pets</a>
+            <a href="../../pages/main/index.html" id="active"
+              >About the shelter</a
+            >
+            <a href="../../pages/pets/index.html">Our pets</a>
             <a href="#help">Help the shelter</a>
             <a href="#footer">Contacts</a>
           </div>
@@ -169,7 +171,7 @@
         <!-- end of right button -->
       </div>
       <div id="rest-btn">
-        <a href="/pages/pets/index.html">Get to know the rest</a>
+        <a href="../../pages/pets/index.html">Get to know the rest</a>
       </div>
     </section>
     <!-- end of our friends -->
