--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -9,7 +9,24 @@
   </head>
   <body>
     <!-- header -->
-    <header></header>
+    <header>
+      <div class="header-center">
+        <a href="../../pages/pets/index.html" class="logo">
+          <h1>Cozy House</h1>
+          <p>Shelter for pets in Boston</p>
+        </a>
+        <nav>
+          <ul>
+            <li><a href="../../pages/main/index.html">About the shelter</a></li>
+            <li>
+              <a href="../../pages/pets/index.html" id="active">Our Pets</a>
+            </li>
+            <li><a href="">Help the shelter</a></li>
+            <li><a href="">Contacts</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <!-- end of header -->
     <script src="./script.js"></script>
   </body>
