feat: add our friends section to the our pets page

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/4809f3b02f.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Our Pets</title>
   </head>
   <body>
     <!-- header -->
     <header>
       <div class="header-center">
-        <a href="../../pages/pets/index.html" class="logo">
+        <a href="./index.html" class="logo">
           <h1>Cozy House</h1>
           <p>Shelter for pets in Boston</p>
         </a>
         <nav>
           <ul>
-            <li><a href="../../pages/main/index.html">About the shelter</a></li>
+            <li><a href="../main/index.html">About the shelter</a></li>
             <li>
-              <a href="../../pages/pets/index.html" id="active">Our Pets</a>
+              <a href="../pets/index.html" id="active">Our Pets</a>
             </li>
             <li><a href="">Help the shelter</a></li>
             <li><a href="">Contacts</a></li>
@@ -28,6 +32,102 @@
       </div>
     </header>
     <!-- end of header -->
+
+    <!-- our friends -->
+    <section class="our-friends">
+      <div class="our-friends-center">
+        <h3 class="our-friends-title">
+          Our friends who are looking for a house
+        </h3>
+        <div class="cards">
+          <!-- single card -->
+          <div class="single-card">
+            <img
+              src="../../assets/images/pets-katrine.png"
+              alt="pets-katrine"
+            />
+            <h3>katrine</h3>
+            <a href="">Learn more</a>
+          </div>
+          <!-- end of single card -->
+          <!-- single card -->
+          <div class="single-card">
+            <img
+              src="../../assets/images/pets-jennifer.png"
+              alt="pets-jennifer"
+            />
+            <h3>jennifer</h3>
+            <a href="">Learn more</a>
+          </div>
+          <!-- end of single card -->
+          <!-- single card -->
+          <div class="single-card">
+            <img src="../../assets/images/pets-woody.png" alt="pets-woody" />
+            <h3>woody</h3>
+            <a href="">Learn more</a>
+          </div>
+          <!-- end of single card -->
+          <!-- single card -->
+          <div class="single-card">
+            <img src="../../assets/images/pets-sophia.png" alt="pets-sophia" />
+            <h3>sophia</h3>
+            <a href="">Learn more</a>
+          </div>
+          <!-- end of single card -->
+          <!-- single card -->
+          <div class="single-card">
+            <img src="../../assets/images/pets-timmy.png" alt="pets-timmy" />
+            <h3>timmy</h3>
+            <a href="">Learn more</a>
+          </div>
+          <!-- end of single card -->
+          <!-- single card -->
+          <div class="single-card">
+            <img src="../../assets/images/pets-charly.png" alt="pets-charly" />
+            <h3>charly</h3>
+            <a href="">Learn more</a>
+          </div>
+          <!-- end of single card -->
+          <!-- single card -->
+          <div class="single-card">
+            <img
+              src="../../assets/images/pets-scarlet.png"
+              alt="pets-scarlet"
+            />
+            <h3>scarlet</h3>
+            <a href="">Learn more</a>
+          </div>
+          <!-- end of single card -->
+          <!-- single card -->
+          <div class="single-card">
+            <img
+              src="../../assets/images/pets-freddie.png"
+              alt="pets-freddie"
+            />
+            <h3>freddie</h3>
+            <a href="">Learn more</a>
+          </div>
+          <!-- end of single card -->
+        </div>
+        <div class="pagination">
+          <button type="button" disabled data-disabled>
+            <i class="fa-solid fa-angles-left"></i>
+          </button>
+          <button type="button" disabled data-disabled>
+            <i class="fa-solid fa-angle-left"></i>
+          </button>
+          <button type="button">1</button>
+          <button type="button">
+            <i class="fa-solid fa-angle-right"></i>
+          </button>
+          <button type="button">
+            <i class="fa-solid fa-angles-right"></i>
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- end of our friends -->
+
     <script src="./script.js"></script>
   </body>
 </html>
