--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -128,6 +128,56 @@
     </section>
     <!-- end of our friends -->
 
+    <!-- footer -->
+    <footer id="footer">
+      <div class="footer-center">
+        <!-- column 1 -->
+        <div class="column">
+          <h1>For questions and suggestions</h1>
+          <a href="mailto:email@shelter.com" class="margin-btm">
+            <div class="row">
+              <img src="../../assets/icons/icon-email.png" alt="email icon" />
+              email@shelter.com
+            </div>
+          </a>
+          <a href="tel:+136745677554">
+            <div class="row">
+              <img src="../../assets/icons/icon-phone.png" alt="phone icon" />
+              +136745677554
+            </div>
+          </a>
+        </div>
+        <!-- end of column 1 -->
+
+        <!-- column 2 -->
+        <div class="column">
+          <h1>We are waiting for your visit</h1>
+          <a
+            href="https://goo.gl/maps/cGZBECfdAjtZ41m3A"
+            class="margin-btm"
+            target="_blank"
+          >
+            <div class="row">
+              <img src="../../assets/icons/icon-marker.png" alt="marker icon" />
+              1 Central Street, Boston (entrance from the store)
+            </div>
+          </a>
+          <a href="https://goo.gl/maps/vuaURMWv2QeDEYSg8" target="_blank">
+            <div class="row">
+              <img src="../../assets/icons/icon-marker.png" alt="marker icon" />
+              18 South Park, London
+            </div>
+          </a>
+        </div>
+        <!-- end of column 2 -->
+
+        <!-- column 3 -->
+        <img src="../../assets/images/footer-puppy.png" alt="puppy image" />
+        <!-- end of column 3 -->
+      </div>
+    </footer>
+    <!-- end of footer -->
+
     <script src="./script.js"></script>
   </body>
 </html>
