refactor: change minor parts according to the task requirements

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -15,20 +15,25 @@
     <!-- header -->
     <header>
       <div class="header-center">
-        <a href="./index.html" class="logo">
+        <!-- logo -->
+        <a href="../main/index.html" class="logo">
           <h1>Cozy House</h1>
           <p>Shelter for pets in Boston</p>
         </a>
+        <!-- end of logo -->
+
+        <!-- navbar -->
         <nav>
           <ul>
             <li><a href="../main/index.html">About the shelter</a></li>
             <li>
               <a href="../pets/index.html" id="active">Our Pets</a>
             </li>
-            <li><a href="">Help the shelter</a></li>
-            <li><a href="">Contacts</a></li>
+            <li><a href="../main/index.html#help">Help the shelter</a></li>
+            <li><a href="#footer">Contacts</a></li>
           </ul>
         </nav>
+        <!-- end of navbar -->
       </div>
     </header>
     <!-- end of header -->
@@ -109,6 +114,7 @@
           </div>
           <!-- end of single card -->
         </div>
+        <!-- pagination -->
         <div class="pagination">
           <button type="button" disabled data-disabled>
             <i class="fa-solid fa-angles-left"></i>
@@ -124,6 +130,7 @@
             <i class="fa-solid fa-angles-right"></i>
           </button>
         </div>
+        <!-- end of pagination -->
       </div>
     </section>
     <!-- end of our friends -->
@@ -133,7 +140,7 @@
       <div class="footer-center">
         <!-- column 1 -->
         <div class="column">
-          <h1>For questions and suggestions</h1>
+          <h2>For questions and suggestions</h2>
           <a href="mailto:email@shelter.com" class="margin-btm">
             <div class="row">
               <img src="../../assets/icons/icon-email.png" alt="email icon" />
@@ -151,7 +158,7 @@
 
         <!-- column 2 -->
         <div class="column">
-          <h1>We are waiting for your visit</h1>
+          <h2>We are waiting for your visit</h2>
           <a
             href="https://goo.gl/maps/cGZBECfdAjtZ41m3A"
             class="margin-btm"
