refactor: change font properties of the page circle and modify Our Friends title according to the Figma design

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -42,7 +42,8 @@
     <section class="our-friends">
       <div class="our-friends-center">
         <h3 class="our-friends-title">
-          Our friends who are looking for a house
+          Our friends who <br />
+          are looking for a house
         </h3>
         <div class="cards">
           <!-- single card -->
