feat: add responsiveness to the pages

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -28,6 +28,11 @@
             <a href="#help">Help the shelter</a>
             <a href="#footer">Contacts</a>
           </div>
+          <img
+            src="../../assets/icons/Burger.png"
+            alt="nav-icon"
+            class="menu-btn"
+          />
         </div>
 
         <div class="main">
@@ -46,6 +51,27 @@
             src="../../assets/images/start-screen-puppy.png"
             alt="puppy image"
           />
+        </div>
+      </div>
+      <div class="mobile-menu menu-inactive">
+        <div class="menu-top">
+          <a href="../../pages/main/index.html" class="nav-left">
+            <h1>cozy house</h1>
+            <p>Shelter for pets in Boston</p>
+          </a>
+          <img
+            src="../../assets/icons/Burger.png"
+            alt="burger-icon"
+            class="menu-btn"
+          />
+        </div>
+        <div class="menu">
+          <a href="../../pages/main/index.html" id="active"
+            >About the shelter</a
+          >
+          <a href="../../pages/pets/index.html">Our pets</a>
+          <a href="#help">Help the shelter</a>
+          <a href="#footer">Contacts</a>
         </div>
       </div>
     </header>
@@ -82,7 +108,10 @@
 
     <!-- our friends -->
     <section class="friends" id="friends">
-      <h1 class="friends-title">Our friends who are looking for a house</h1>
+      <h1 class="friends-title">
+        Our friends who <br />
+        are looking for a house
+      </h1>
       <div class="friends-center">
         <!-- single card -->
         <div class="single-card">
@@ -180,64 +209,60 @@
     <section class="help" id="help">
       <h1 class="help-title">How you can help our shelter</h1>
       <div class="help-center">
-        <div class="first-row">
-          <!-- single item -->
-          <div class="single-item">
-            <img src="../../assets/icons/icon-pet-food.svg" alt="" />
-            <h1>Pet food</h1>
-          </div>
-          <!-- end of single item -->
-          <!-- single item -->
-          <div class="single-item">
-            <img src="../../assets/icons/icon-transportation.svg" alt="" />
-            <h1>Transportation</h1>
-          </div>
-          <!-- end of single item -->
-          <!-- single item -->
-          <div class="single-item">
-            <img src="../../assets/icons/icon-toys.svg" alt="" />
-            <h1>Toys</h1>
-          </div>
-          <!-- end of single item -->
-          <!-- single item -->
-          <div class="single-item">
-            <img src="../../assets/icons/icon-bowls-and-cups.svg" alt="" />
-            <h1>Bowls and cops</h1>
-          </div>
-          <!-- end of single item -->
-          <!-- single item -->
-          <div class="single-item">
-            <img src="../../assets/icons/icon-shampoos.svg" alt="" />
-            <h1>Shampoos</h1>
-          </div>
-          <!-- end of single item -->
+        <!-- single item -->
+        <div class="single-item">
+          <img src="../../assets/icons/icon-pet-food.svg" alt="" />
+          <h1>Pet food</h1>
         </div>
-        <div class="second-row">
-          <!-- single item -->
-          <div class="single-item">
-            <img src="../../assets/icons/icon-vitamins.svg" alt="" />
-            <h1>Vitamins</h1>
-          </div>
-          <!-- end of single item -->
-          <!-- single item -->
-          <div class="single-item">
-            <img src="../../assets/icons/icon-medicines.svg" alt="" />
-            <h1>Medicines</h1>
-          </div>
-          <!-- end of single item -->
-          <!-- single item -->
-          <div class="single-item">
-            <img src="../../assets/icons/icon-collars-leashes.svg" alt="" />
-            <h1>Collars/leashes</h1>
-          </div>
-          <!-- end of single item -->
-          <!-- single item -->
-          <div class="single-item">
-            <img src="../../assets/icons/icon-sleeping-area.svg" alt="" />
-            <h1>Sleeping areas</h1>
-          </div>
-          <!-- end of single item -->
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="single-item">
+          <img src="../../assets/icons/icon-transportation.svg" alt="" />
+          <h1>Transportation</h1>
         </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="single-item">
+          <img src="../../assets/icons/icon-toys.svg" alt="" />
+          <h1>Toys</h1>
+        </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="single-item">
+          <img src="../../assets/icons/icon-bowls-and-cups.svg" alt="" />
+          <h1>Bowls and cops</h1>
+        </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="single-item">
+          <img src="../../assets/icons/icon-shampoos.svg" alt="" />
+          <h1>Shampoos</h1>
+        </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="single-item">
+          <img src="../../assets/icons/icon-vitamins.svg" alt="" />
+          <h1>Vitamins</h1>
+        </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="single-item">
+          <img src="../../assets/icons/icon-medicines.svg" alt="" />
+          <h1>Medicines</h1>
+        </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="single-item">
+          <img src="../../assets/icons/icon-collars-leashes.svg" alt="" />
+          <h1>Collars/leashes</h1>
+        </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="single-item">
+          <img src="../../assets/icons/icon-sleeping-area.svg" alt="" />
+          <h1>Sleeping areas</h1>
+        </div>
+        <!-- end of single item -->
       </div>
     </section>
     <!-- end of help -->
@@ -326,5 +351,6 @@
       </div>
     </footer>
     <!-- end of footer -->
+    <script src="./script.js"></script>
   </body>
 </html>
