--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -34,6 +34,30 @@
           </ul>
         </nav>
         <!-- end of navbar -->
+        <img
+          src="../../assets/icons/Burger-pets.png"
+          alt="nav-icon"
+          class="menu-btn"
+        />
+      </div>
+      <div class="mobile-menu menu-inactive">
+        <div class="menu-top">
+          <a href="../../pages/main/index.html" class="nav-left">
+            <h1>cozy house</h1>
+            <p>Shelter for pets in Boston</p>
+          </a>
+          <img
+            src="../../assets/icons/Burger.png"
+            alt="burger-icon"
+            class="menu-btn"
+          />
+        </div>
+        <div class="menu">
+          <a href="../../pages/main/index.html">About the shelter</a>
+          <a href="../../pages/pets/index.html" id="active">Our pets</a>
+          <a href="../main/index.html#help">Help the shelter</a>
+          <a href="#footer">Contacts</a>
+        </div>
       </div>
     </header>
     <!-- end of header -->
