refactor: change indentations in all pages accoring to the Figme layout

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -207,7 +207,11 @@
 
     <!-- help -->
     <section class="help" id="help">
-      <h1 class="help-title">How you can help our shelter</h1>
+      <h1 class="help-title">
+        How you can help
+        <br />
+        our shelter
+      </h1>
       <div class="help-center">
         <!-- single item -->
         <div class="single-item">
@@ -254,7 +258,7 @@
         <!-- single item -->
         <div class="single-item">
           <img src="../../assets/icons/icon-collars-leashes.svg" alt="" />
-          <h1>Collars/leashes</h1>
+          <h1>Collars / leashes</h1>
         </div>
         <!-- end of single item -->
         <!-- single item -->
