--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -27,7 +27,7 @@
           <ul>
             <li><a href="../main/index.html">About the shelter</a></li>
             <li>
-              <a href="../pets/index.html" id="active">Our Pets</a>
+              <a href="../pets/index.html" id="active">Our pets</a>
             </li>
             <li><a href="../main/index.html#help">Help the shelter</a></li>
             <li><a href="#footer">Contacts</a></li>
@@ -47,7 +47,7 @@
             <p>Shelter for pets in Boston</p>
           </a>
           <img
-            src="../../assets/icons/Burger.png"
+            src="../../assets/icons/Burger-pets.png"
             alt="burger-icon"
             class="menu-btn"
           />
@@ -59,6 +59,7 @@
           <a href="#footer">Contacts</a>
         </div>
       </div>
+      <div class="mobile-menu-background"></div>
     </header>
     <!-- end of header -->
 
@@ -69,6 +70,42 @@
           Our friends who <br />
           are looking for a house
         </h3>
+        <div class="modal modal-hidden">
+          <div class="modal-content">
+            <img
+              src="../../assets/images/pets-jennifer.png"
+              alt=""
+              class="modal-left"
+            />
+            <div class="modal-right">
+              <h1></h1>
+              <h2></h2>
+              <p></p>
+              <ul>
+                <li>
+                  <h3>Age: <span class="modal-age"></span></h3>
+                </li>
+                <li>
+                  <h3>
+                    Inoculations: <span class="modal-inoculations"></span>
+                  </h3>
+                </li>
+                <li>
+                  <h3>Diseases: <span class="modal-diseases"></span></h3>
+                </li>
+                <li>
+                  <h3>Parasites: <span class="modal-parasites"></span></h3>
+                </li>
+              </ul>
+            </div>
+            <span class="modal-close"
+              ><img
+                src="../../assets/icons/Vector.png"
+                alt=""
+                class="modal-close-icon"
+            /></span>
+          </div>
+        </div>
         <div class="cards">
           <!-- single card -->
           <div class="single-card">
@@ -77,7 +114,7 @@
               alt="pets-katrine"
             />
             <h3>katrine</h3>
-            <a href="">Learn more</a>
+            <a href="#">Learn more</a>
           </div>
           <!-- end of single card -->
           <!-- single card -->
@@ -87,45 +124,45 @@
               alt="pets-jennifer"
             />
             <h3>jennifer</h3>
-            <a href="">Learn more</a>
+            <a href="#">Learn more</a>
           </div>
           <!-- end of single card -->
           <!-- single card -->
           <div class="single-card">
             <img src="../../assets/images/pets-woody.png" alt="pets-woody" />
             <h3>woody</h3>
-            <a href="">Learn more</a>
+            <a href="#">Learn more</a>
           </div>
           <!-- end of single card -->
           <!-- single card -->
           <div class="single-card">
             <img src="../../assets/images/pets-sophia.png" alt="pets-sophia" />
             <h3>sophia</h3>
-            <a href="">Learn more</a>
+            <a href="#">Learn more</a>
           </div>
           <!-- end of single card -->
           <!-- single card -->
           <div class="single-card">
             <img src="../../assets/images/pets-timmy.png" alt="pets-timmy" />
             <h3>timmy</h3>
-            <a href="">Learn more</a>
+            <a href="#">Learn more</a>
           </div>
           <!-- end of single card -->
           <!-- single card -->
           <div class="single-card">
             <img src="../../assets/images/pets-charly.png" alt="pets-charly" />
             <h3>charly</h3>
-            <a href="">Learn more</a>
+            <a href="#">Learn more</a>
           </div>
           <!-- end of single card -->
           <!-- single card -->
           <div class="single-card">
             <img
-              src="../../assets/images/pets-scarlet.png"
+              src="../../assets/images/pets-scarlett.png"
               alt="pets-scarlet"
             />
-            <h3>scarlet</h3>
-            <a href="">Learn more</a>
+            <h3>scarlett</h3>
+            <a href="#">Learn more</a>
           </div>
           <!-- end of single card -->
           <!-- single card -->
@@ -135,7 +172,7 @@
               alt="pets-freddie"
             />
             <h3>freddie</h3>
-            <a href="">Learn more</a>
+            <a href="#">Learn more</a>
           </div>
           <!-- end of single card -->
         </div>
